--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,9 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -123,7 +126,7 @@
         <script src="scripts/controllers/orders/ordersController.js"></script>
         <script src="scripts/filters/nameProductFilter.js"></script>
         <script src="scripts/customDirectives/orderDetails.js"></script>
-
+        <script src="scripts/customDirectives/calendar.js"></script>
         <script src="scripts/services/databaseService.js"></script>
         <!-- endbuild -->
 </body>
