--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,11 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <!--<script type="text/javascript" src="/browserify.js"></script>-->
-    <link rel="stylesheet" href="styles/main.css">
+    <link href="styles/main.scss" rel="stylesheet/scss"/>
     <link href="styles/bootstrap.css" rel="stylesheet"/>
     <link href="styles/animations.css" rel="stylesheet"/>
+    <link href="styles/test.less" rel="stylesheet/less"/>
     <link href="styles/styles.css" rel="stylesheet" />
-    <script src="scripts/services/cordova.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- endbuild -->
   </head>
@@ -100,15 +100,17 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
-    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/less/dist/less.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -125,9 +127,11 @@
         <script src="scripts/controllers/orders/orderEditController.js"></script>
         <script src="scripts/controllers/orders/ordersController.js"></script>
         <script src="scripts/filters/nameProductFilter.js"></script>
+        <script src="scripts/filters/ordersByAuthorOrProductName.js"></script>
         <script src="scripts/customDirectives/orderDetails.js"></script>
         <script src="scripts/customDirectives/calendar.js"></script>
-        <script src="scripts/services/databaseService.js"></script>
+        <script src="scripts/customDirectives/dExpandCollapse.js"></script>
+        <script src="scripts/services/cordova.js"></script>
         <!-- endbuild -->
 </body>
 </html>
