--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,8 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-momentjs/angular-momentjs.js"></script>
     <script src="bower_components/less/dist/less.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
