--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link href="styles/test.less" rel="stylesheet/less"/>
     <link href="styles/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="angularCordovaApp">
@@ -112,6 +113,7 @@
     <script src="bower_components/less/dist/less.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/font-awesome/scss/font-awesome.scss"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
