minor changes on  Calendar custom directive

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link href="styles/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="angularCordovaApp">
@@ -131,6 +132,7 @@
         <script src="scripts/customDirectives/orderDetails.js"></script>
         <script src="scripts/customDirectives/calendar.js"></script>
         <script src="scripts/customDirectives/dExpandCollapse.js"></script>
+        <script src="scripts/customDirectives/dropDownMultiSelect.js"></script>
         <script src="scripts/services/cordova.js"></script>
 
         <!-- endbuild -->
