--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
     <!-- endbuild -->
   </head>
-  <body ng-app="angularCordovaApp">
+  <body ng-app="angularCordovaApp" class="container">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
