--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,14 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
     <!-- endbuild -->
   </head>
-  <body ng-app="angularCordovaApp" class="container">
+  <body ng-app="angularCordovaApp" >
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" class = "navbar navbar-inner navbar-fixed-top" >
-      <div class="navbar navbar-default" role="navigation">
+    <div  class = "navbar navbar-inner navbar-fixed-top" >
+     <!-- <div class="navbar navbar-default" role="navigation">-->
         <div class="container">
           <div class="navbar-header">
 
@@ -132,7 +132,7 @@
         <script src="scripts/customDirectives/orderDetails.js"></script>
         <script src="scripts/customDirectives/calendar.js"></script>
         <script src="scripts/customDirectives/dExpandCollapse.js"></script>
-        <script src="scripts/customDirectives/dropDownMultiSelect.js"></script>
+      <script src="scripts/customDirectives/dropDownMultiSelect.js"></script>
         <script src="scripts/services/cordova.js"></script>
 
         <!-- endbuild -->
