--- a/app/scripts/customDirectives/dropDownMultiSelect.html
+++ b/app/scripts/customDirectives/dropDownMultiSelect.html
@@ -43,7 +43,7 @@ open the control over the the existing
 <div data-ng-class ='{open: open}' >
   <button   data-ng-click="open =!open; toggleSelect()">
  <!-- <span class="pull-left">Select </span>&nbsp;<span class="caret pull-right"></span>-->
-    <span class="pull-left" >Select Authors... </span>
+    <span class="pull-left"> {{title}} </span>
     &nbsp;
     <span class='caret -pull-right'></span>
   </button>
